<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trip.TripDetails"
    android:background="@color/backgroung">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/BlueSky"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="262dp"
            android:layout_height="438dp"
            android:layout_marginBottom="152dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/paneltripcolor" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="139dp"
            android:layout_height="68dp"
            android:layout_marginBottom="252dp"
            android:backgroundTint="@color/panel"
            android:onClick="accessToTripMap"
            android:text="See your trip on the map "
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/place"
            app:layout_constraintVertical_bias="0.188" />

        <Button
            android:id="@+id/place"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="111dp"
            android:layout_height="74dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/panel"
            android:onClick="accessToPlaces"
            android:text="Places of the trip"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="68dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.355"
            app:srcCompat="@drawable/itinerary" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="39dp"
            android:layout_height="66dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.099"
            app:srcCompat="@drawable/iconplace" />



            <androidx.cardview.widget.CardView
                android:id="@+id/noteCard"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="450dp"

                app:cardCornerRadius="40dp"
                app:cardElevation="5dp"
                app:contentPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="296dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="410dp">

                    <TextView
                        android:id="@+id/tripDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="date"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.127"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView11"
                        app:layout_constraintVertical_bias="0.257" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:text="Expected time onsite :"
                        android:textColor="#101010"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tripCity"
                        app:layout_constraintVertical_bias="0.255" />

                    <TextView
                        android:id="@+id/placeTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="time"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        app:layout_constraintVertical_bias="0.25" />

                    <TextView
                        android:id="@+id/tripCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="28dp"
                        android:text="city"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.042"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="28dp"
                        android:text="trip in"
                        android:textColor="#101010"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="20dp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="53dp"
                        android:layout_height="25dp"
                        android:text=" days"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/placeTime"
                        app:layout_constraintTop_toBottomOf="@+id/tripCity"
                        app:layout_constraintVertical_bias="0.251" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:backgroundTint="@color/BlueSky"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/delete" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>