<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/BlueSky"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/placeTitle"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Enter Title"
        android:inputType="textPersonName"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/dateTrip1"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Enter the date"
        android:inputType="date"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/placeTitle" />

    <EditText
        android:id="@+id/placeTime"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="How long does your trip last ? (in days) "
        android:inputType="time"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintTop_toBottomOf="@+id/dateTrip1" />


    <SearchView
        android:id="@+id/searchViewTrip"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round"
        android:elevation="5dp"
        android:iconifiedByDefault="false"
        android:inputType="textPersonName"
        android:queryHint="Search a city..."

        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.185"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="In which city do you want to travel ? "
        android:textColor="#151313"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/placeTime" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="304dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"


        android:background="@drawable/button_style1"
        android:onClick="SaveNewTrip"
        android:shadowColor="#FFFDFD"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="confirm location and create the trip"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="visible"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.495"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/map"
        map:layout_constraintVertical_bias="1.0" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="395dp"
        android:layout_height="326dp"
        android:layout_marginBottom="68dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.625"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/searchViewPlace"
        map:layout_constraintVertical_bias="1.0"
        tools:context="com.example.triplanproject.Map.MapAddTripLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>
